--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,40 @@
-httpx
-selectolax
-pyaml
-aiofiles
-pydantic
-aiohttp
-numpy
-python-dotenv
+aiofiles==24.1.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.18
+aiosignal==1.3.2
+annotated-types==0.7.0
+anyio==4.9.0
+asyncpg==0.30.0
+attrs==25.3.0
+certifi==2025.1.31
+frozenlist==1.6.0
+greenlet==3.2.0
+h11==0.14.0
+httpcore==1.0.8
+httpx==0.28.1
+idna==3.10
+multidict==6.4.3
+numpy==2.2.5
+pandas==2.2.3
+playwright==1.51.0
+probableparsing==0.0.1
+propcache==0.3.1
+pyaml==25.1.0
+pydantic==2.11.3
+pydantic-core==2.33.1
+pyee==12.1.1
+python-crfsuite==0.9.11
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
+pytz==2025.2
+pyyaml==6.0.2
+pyyaml-env-tag==0.1
+selectolax==0.3.28
+six==1.17.0
+sniffio==1.3.1
+sqlalchemy==2.0.41
+typing-extensions==4.13.2
+typing-inspection==0.4.0
+tzdata==2025.2
+usaddress==0.5.13
+yarl==1.20.0
