--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -2,6 +2,7 @@
 global_settings:
   max_concurrent_workers: 5 # Max concurrent website tasks
   log_level: INFO # Logging level (DEBUG, INFO, WARNING, ERROR)
+  log_to_file: true # Whether to log to a file in the logs directory
 websites:
   grilld_restaurants:
     enabled: true
@@ -10,7 +11,7 @@ websites:
     fetcher: AsyncHTTPXFetcher # Used for the initial fetch AND detail fetches
     parser: GrilldParser # Use the custom parser
     transformer: GrilldTransformer
-    storage: [JSONStorage, PostgresStorage] # Store the results
+    storage: [PostgresStorage] # Store the results
     config:
       # Options for BOTH initial and detail fetches (unless overridden)
       fetcher_options:
@@ -36,7 +37,7 @@ websites:
     fetcher: AsyncHTTPXFetcher
     parser: GygParser
     transformer: GygTransformer
-    storage: [JSONStorage, PostgresStorage]
+    storage: [PostgresStorage]
     config:
       fetcher_options:
         headers:
@@ -63,7 +64,7 @@ websites:
     fetcher: AsyncHTTPXFetcher
     parser: EljannahParser
     transformer: EljannahTransformer
-    storage: [JSONStorage, PostgresStorage]
+    storage: [PostgresStorage]
     config:
       fetcher_options:
         headers:
@@ -81,21 +82,15 @@ websites:
     # start_urls: # Not needed by KfcParser
     fetcher: AsyncHTTPXFetcher
     parser: KfcParser
-    storage:
-      - JSONStorage
-      - PostgresStorage
+    storage: [PostgresStorage]
     config: # Site-specific configuration passed down to plugins
       fetcher_options:
         # --- Standard Fetcher Options (applied generally, can be overridden by api_settings) ---
-        timeout: 190
-        # --- ScraperAPI Configuration (if used) ---
-        use_scraperapi: false # Set to false due to low google success rates for now.
-        scraperapi_key: ${SCRAPERAPI_KEY}
-        scraperapi_options: # Optional dictionary for extra ScraperAPI params
-          country_code: "au" # Example: Request Australian IPs
-          # render: "true"                     # Example: Uncomment to enable JS rendering (slower, costs more credits)
-          # premium: "true"                    # Example: Uncomment to use premium proxies (if needed, costs more)
-          keep_headers: "true" # Example: Force ScraperAPI to forward headers defined above/in api_settings
+        timeout: 30
+        max_retries: 2
+        use_proxy: true # Set to false due to low google success rates for now.
+        proxy_username: ${IPROYAL_USERNAME}
+        proxy_password: ${IPROYAL_PASSWORD}
 
       parser_options: # Options specific to the KfcParser logic
         grid_rows: 15 # Increased grid density
@@ -153,9 +148,7 @@ websites:
     fetcher: AsyncHTTPXFetcher # Required for instantiation
     parser: NoodleboxParser
     transformer: NoodleboxTransformer
-    storage:
-      - JSONStorage
-      - PostgresStorage
+    storage: [PostgresStorage]
     config: # Site-specific config passed to plugins
       fetcher_options: # Global options for the fetcher
         timeout: 45
