--- a/requirements.txt
+++ b/requirements.txt
@@ -7,12 +7,16 @@ anyio==4.9.0
 asyncpg==0.30.0
 attrs==25.3.0
 certifi==2025.1.31
+click==8.2.1
+fastapi==0.115.12
 frozenlist==1.6.0
 greenlet==3.2.0
 h11==0.14.0
 httpcore==1.0.8
 httpx==0.28.1
 idna==3.10
+jinja2==3.1.6
+markupsafe==3.0.2
 multidict==6.4.3
 numpy==2.2.5
 pandas==2.2.3
@@ -29,12 +33,17 @@ python-dotenv==1.1.0
 pytz==2025.2
 pyyaml==6.0.2
 pyyaml-env-tag==0.1
+redis==6.2.0
+rq==2.3.3
 selectolax==0.3.28
 six==1.17.0
 sniffio==1.3.1
 sqlalchemy==2.0.41
+sse-starlette==2.3.6
+starlette==0.46.2
 typing-extensions==4.13.2
 typing-inspection==0.4.0
 tzdata==2025.2
 usaddress==0.5.13
+uvicorn==0.34.3
 yarl==1.20.0
