--- a/requirements.txt
+++ b/requirements.txt
@@ -4,46 +4,60 @@ aiohttp==3.11.18
 aiosignal==1.3.2
 annotated-types==0.7.0
 anyio==4.9.0
+asyncio-atexit==1.0.1
 asyncpg==0.30.0
 attrs==25.3.0
+black==25.9.0
 certifi==2025.1.31
 click==8.2.1
+Deprecated==1.2.18
+emoji==2.15.0
 fastapi==0.115.12
 frozenlist==1.6.0
+grapheme==0.6.0
 greenlet==3.2.0
 h11==0.14.0
 httpcore==1.0.8
 httpx==0.28.1
 idna==3.10
-jinja2==3.1.6
-markupsafe==3.0.2
+Jinja2==3.1.6
+MarkupSafe==3.0.2
+mss==10.1.0
 multidict==6.4.3
+mypy_extensions==1.1.0
 numpy==2.2.5
+packaging==25.0
 pandas==2.2.3
+pathspec==0.12.1
+platformdirs==4.5.0
 playwright==1.51.0
 probableparsing==0.0.1
 propcache==0.3.1
 pyaml==25.1.0
 pydantic==2.11.3
-pydantic-core==2.33.1
+pydantic_core==2.33.1
 pyee==12.1.1
 python-crfsuite==0.9.11
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
+pytokens==0.1.10
 pytz==2025.2
-pyyaml==6.0.2
-pyyaml-env-tag==0.1
+PyYAML==6.0.2
+pyyaml_env_tag==0.1
 redis==6.2.0
 rq==2.3.3
 selectolax==0.3.28
 six==1.17.0
 sniffio==1.3.1
-sqlalchemy==2.0.41
+SQLAlchemy==2.0.41
 sse-starlette==2.3.6
 starlette==0.46.2
-typing-extensions==4.13.2
 typing-inspection==0.4.0
+typing_extensions==4.13.2
 tzdata==2025.2
 usaddress==0.5.13
 uvicorn==0.34.3
+websockets==15.0.1
+wrapt==1.17.3
 yarl==1.20.0
+zendriver==0.14.2
